# pyprojectsetup

./: .flake8  README.md  initial_script.py  pyproject.toml  requirements.txt  test.py
pyprojectsetup/: __main__.py  core.py  initial_script.py  initial_setup.py  main.py  old_core.py  old_initial_setup.py  setup_manager.py  utils.py
pyprojectsetup/templates/: .gitlab-ci.yml  README.md  pyproject.toml  tox.ini
