[project]
name = "pyprojectsetup"
description = "My Python package."
version = "0.1.0"
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "requests",
    "colorama>=0.4.6",
    "virtualenv",
]

[project.scripts]
initial-setup = "pyprojectsetup.initial_setup:main"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pyprojectsetup"]

[tool.setuptools.package-data]
pyprojectsetup = ["**/*.txt"]

[tool.mypy]
exclude = [
    'templates',
]
warn_unused_configs = true

[tool.black]
line-length = 120
force-exclude = '''
(
    templates
)
'''
