[project]
name = "pyprojectsetup"
description = "My Python package."
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "requests",
    "colorama>=0.4.6",
    "virtualenv",
    "InquirerPy",
]
dynamic = ["version"]

[project.scripts]
pyprojectsetup = "pyprojectsetup.main:main"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pyprojectsetup"]

[tool.setuptools.dynamic]
version = {attr = "pyprojectsetup.__version__"}

[tool.setuptools.package-data]
pyprojectsetup = ["**/*.txt"]

[tool.mypy]
exclude = [
    'templates',
]
warn_unused_configs = true

[tool.black]
line-length = 120
force-exclude = '''
(
    templates
)
'''
